--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@prisma/client": "^7.2.0",
+    "@prisma/extension-accelerate": "^3.0.1",
     "better-auth": "^1.4.10",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
