--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "format": "biome format --write"
   },
   "dependencies": {
+    "@polar-sh/better-auth": "^1.6.3",
+    "@polar-sh/sdk": "^0.42.1",
     "@prisma/client": "^7.2.0",
     "@prisma/extension-accelerate": "^3.0.1",
     "@radix-ui/react-alert-dialog": "^1.1.15",
