--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "format": "biome format --write"
   },
   "dependencies": {
+    "@aws-sdk/s3-request-presigner": "^3.958.0",
     "@polar-sh/better-auth": "^1.6.3",
     "@polar-sh/sdk": "^0.42.1",
     "@prisma/client": "^7.2.0",
