env: add AWS access key ID & secret (commit 2 of 6)

--- a/.env
+++ b/.env
@@ -32,3 +32,7 @@ NEXT_PUBLIC_POLAR_ENTERPRISE_YEARLY_PRODUCT_ID=e5168ae1-2bf4-42a5-b1ff-975e8b200
 # Amazon S3 (commit 1): region and bucket
 AWS_REGION="us-east-1"
 AWS_S3_BUCKET="my-tangabiz-bucket"
+
+# Amazon S3 (commit 2): access keys (replace with real IAM credentials)
+AWS_ACCESS_KEY_ID="AKIAEXAMPLEKEY12345"
+AWS_SECRET_ACCESS_KEY="wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY"
