--- a/.env
+++ b/.env
@@ -36,3 +36,6 @@ AWS_S3_BUCKET="my-tangabiz-bucket"
 # Amazon S3 (commit 2): access keys (replace with real IAM credentials)
 AWS_ACCESS_KEY_ID="AKIAEXAMPLEKEY12345"
 AWS_SECRET_ACCESS_KEY="wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY"
+
+# Amazon S3 (commit 3): optional session token for temporary credentials
+AWS_SESSION_TOKEN="dummy-session-token"
