env: add S3 endpoint & path-style flag (commit 4 of 6)

--- a/.env
+++ b/.env
@@ -39,3 +39,7 @@ AWS_SECRET_ACCESS_KEY="wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY"
 
 # Amazon S3 (commit 3): optional session token for temporary credentials
 AWS_SESSION_TOKEN="dummy-session-token"
+
+# Amazon S3 (commit 4): endpoint and path-style configuration
+AWS_S3_ENDPOINT="https://s3.amazonaws.com"
+AWS_S3_FORCE_PATH_STYLE="false"
