--- a/.env
+++ b/.env
@@ -43,3 +43,7 @@ AWS_SESSION_TOKEN="dummy-session-token"
 # Amazon S3 (commit 4): endpoint and path-style configuration
 AWS_S3_ENDPOINT="https://s3.amazonaws.com"
 AWS_S3_FORCE_PATH_STYLE="false"
+
+# Amazon S3 (commit 5): client-exposed variables for browser usage
+NEXT_PUBLIC_S3_BUCKET="my-tangabiz-bucket"
+NEXT_PUBLIC_S3_REGION="us-east-1"
