env: add S3 upload settings (max size & presign expiry) (commit 6 of 6)

--- a/.env
+++ b/.env
@@ -47,3 +47,7 @@ AWS_S3_FORCE_PATH_STYLE="false"
 # Amazon S3 (commit 5): client-exposed variables for browser usage
 NEXT_PUBLIC_S3_BUCKET="my-tangabiz-bucket"
 NEXT_PUBLIC_S3_REGION="us-east-1"
+
+# Amazon S3 (commit 6): upload settings and presign expiry (seconds)
+S3_MAX_UPLOAD_SIZE="10485760"
+S3_PRESIGN_EXPIRES="3600"
