--- a/native/app.json
+++ b/native/app.json
@@ -3,7 +3,6 @@
     "name": "Tangabiz",
     "slug": "tangabiz",
     "version": "1.0.0",
-
     "scheme": "tangabiz",
     "platforms": ["ios", "android"],
     "web": {
@@ -11,18 +10,58 @@
       "output": "static",
       "favicon": "./assets/favicon.png"
     },
-    "plugins": ["expo-router"],
+    "plugins": [
+      "expo-router",
+      "expo-font",
+      "expo-secure-store",
+      [
+        "expo-camera",
+        {
+          "cameraPermission": "Allow Tangabiz to access your camera for product photos and barcode scanning.",
+          "microphonePermission": "Allow Tangabiz to access your microphone."
+        }
+      ],
+      [
+        "expo-image-picker",
+        {
+          "photosPermission": "Allow Tangabiz to access your photos for product images and uploads."
+        }
+      ],
+      [
+        "expo-media-library",
+        {
+          "photosPermission": "Allow Tangabiz to access your photos for saving reports and receipts.",
+          "savePhotosPermission": "Allow Tangabiz to save photos to your library."
+        }
+      ],
+      [
+        "expo-barcode-scanner",
+        {
+          "cameraPermission": "Allow Tangabiz to use the camera for barcode scanning."
+        }
+      ],
+      [
+        "expo-notifications",
+        {
+          "icon": "./assets/notification-icon.png",
+          "color": "#22c55e",
+          "sounds": []
+        }
+      ],
+      [
+        "expo-document-picker",
+        {
+          "iCloudContainerEnvironment": "Production"
+        }
+      ]
+    ],
     "experiments": {
       "typedRoutes": true,
-
       "tsconfigPaths": true
     },
-
     "orientation": "portrait",
     "icon": "./assets/icon.png",
-
     "userInterfaceStyle": "light",
-
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
@@ -31,13 +70,32 @@
     "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.tangabiz.app"
+      "bundleIdentifier": "com.tangabiz.app",
+      "infoPlist": {
+        "NSCameraUsageDescription": "Allow Tangabiz to access your camera for product photos and barcode scanning.",
+        "NSPhotoLibraryUsageDescription": "Allow Tangabiz to access your photos for product images.",
+        "NSPhotoLibraryAddUsageDescription": "Allow Tangabiz to save receipts and reports to your photos.",
+        "NSFaceIDUsageDescription": "Allow Tangabiz to use Face ID for secure authentication."
+      }
     },
     "android": {
       "package": "com.tangabiz.app",
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#22c55e"
+      },
+      "permissions": [
+        "android.permission.CAMERA",
+        "android.permission.READ_EXTERNAL_STORAGE",
+        "android.permission.WRITE_EXTERNAL_STORAGE",
+        "android.permission.RECORD_AUDIO",
+        "android.permission.VIBRATE",
+        "android.permission.RECEIVE_BOOT_COMPLETED"
+      ]
+    },
+    "extra": {
+      "eas": {
+        "projectId": "your-project-id"
       }
     }
   }
