--- a/native/package.json
+++ b/native/package.json
@@ -18,7 +18,12 @@
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
     "@react-navigation/native": "^7.1.6",
+    "@rn-primitives/portal": "^1.3.0",
+    "@rn-primitives/slot": "^1.2.0",
+    "@rn-primitives/types": "^1.2.0",
     "@shopify/flash-list": "^2.2.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "expo": "^54.0.0",
     "expo-barcode-scanner": "^13.0.1",
     "expo-blur": "^15.0.8",
@@ -43,19 +48,21 @@
     "expo-system-ui": "~6.0.7",
     "expo-updates": "^29.0.16",
     "expo-web-browser": "~15.0.7",
+    "lucide-react-native": "^0.562.0",
     "nativewind": "latest",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
-    "react-native-gesture-handler": "~2.28.0",
+    "react-native-gesture-handler": "^2.30.0",
     "react-native-mmkv": "^4.1.1",
-    "react-native-reanimated": "~4.1.1",
+    "react-native-reanimated": "^4.2.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "^15.15.1",
     "react-native-toast-message": "^2.3.3",
     "react-native-web": "^0.21.0",
     "react-native-worklets": "0.5.1",
+    "tailwind-merge": "^3.4.0",
     "zustand": "^4.5.1"
   },
   "devDependencies": {
