--- a/native/package.json
+++ b/native/package.json
@@ -30,7 +30,7 @@
     "expo-camera": "^17.0.10",
     "expo-clipboard": "^8.0.8",
     "expo-constants": "~18.0.9",
-    "expo-dev-client": "~6.0.13",
+    "expo-dev-client": "^6.0.20",
     "expo-device": "~8.0.9",
     "expo-document-picker": "^14.0.8",
     "expo-file-system": "^19.0.21",
@@ -68,12 +68,13 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~19.1.10",
+    "eas-cli": "^16.28.0",
     "eslint": "^9.25.1",
     "eslint-config-expo": "~10.0.0",
     "eslint-config-prettier": "^10.1.2",
     "prettier": "^3.2.5",
-    "tailwindcss": "^3.4.0",
     "prettier-plugin-tailwindcss": "^0.5.11",
+    "tailwindcss": "^3.4.0",
     "typescript": "~5.9.2"
   },
   "private": true
