fix: Add expo-dev-client plugin to app.json

--- a/native/app.json
+++ b/native/app.json
@@ -17,6 +17,7 @@
       "expo-router",
       "expo-font",
       "expo-secure-store",
+      "expo-dev-client",
       [
         "expo-camera",
         {
