--- a/native/package.json
+++ b/native/package.json
@@ -37,12 +37,14 @@
     "expo-font": "^14.0.10",
     "expo-haptics": "^15.0.8",
     "expo-image-picker": "^17.0.10",
+    "expo-intent-launcher": "~13.0.8",
     "expo-linear-gradient": "^15.0.8",
     "expo-linking": "~8.0.8",
     "expo-media-library": "^18.2.1",
     "expo-notifications": "^0.32.16",
     "expo-router": "~6.0.10",
     "expo-secure-store": "^15.0.8",
+    "expo-sharing": "~14.0.8",
     "expo-splash-screen": "^31.0.13",
     "expo-status-bar": "~3.0.8",
     "expo-system-ui": "~6.0.7",
