--- a/native/package.json
+++ b/native/package.json
@@ -57,13 +57,12 @@
     "react-native": "0.81.5",
     "react-native-gesture-handler": "^2.30.0",
     "react-native-mmkv": "^4.1.1",
-    "react-native-reanimated": "^4.2.1",
+    "moti": "^0.29.0",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "^15.15.1",
     "react-native-toast-message": "^2.3.3",
     "react-native-web": "^0.21.0",
-    "react-native-worklets": "0.5.1",
     "tailwind-merge": "^3.4.0",
     "zustand": "^4.5.1"
   },
