--- a/native/eas.json
+++ b/native/eas.json
@@ -7,6 +7,8 @@
     "development": {
       "developmentClient": true,
       "distribution": "internal",
+      "node": "22.12.0",
+      "packageManager": "npm",
       "android": {
         "buildType": "apk"
       },
@@ -16,11 +18,15 @@
     },
     "preview": {
       "distribution": "internal",
+      "node": "22.12.0",
+      "packageManager": "npm",
       "android": {
         "buildType": "apk"
       }
     },
     "production": {
+      "node": "22.12.0",
+      "packageManager": "npm",
       "android": {
         "buildType": "apk"
       }
