--- a/native/package.json
+++ b/native/package.json
@@ -69,6 +69,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@expo/cli": "^54.0.21",
     "@types/react": "~19.1.10",
     "eas-cli": "^16.28.0",
     "eslint": "^9.25.1",
