--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -16,15 +16,19 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@hono/zod-validator": "^0.4.2",
-    "@prisma/client": "^6.2.1",
-    "@prisma/extension-accelerate": "^1.2.1",
-    "hono": "^4.6.16",
-    "nodemailer": "^6.9.16",
+    "@ai-sdk/openai": "^3.0.12",
     "@aws-sdk/client-s3": "^3.705.0",
     "@aws-sdk/s3-request-presigner": "^3.705.0",
+    "@hono/zod-validator": "^0.4.2",
+    "@mastra/core": "^0.24.9",
+    "@mastra/memory": "^0.15.13",
+    "@prisma/client": "^6.2.1",
+    "@prisma/extension-accelerate": "^1.2.1",
+    "ai": "^6.0.39",
+    "hono": "^4.6.16",
+    "nodemailer": "^6.9.16",
     "pdfkit": "^0.15.1",
-    "zod": "^3.24.1"
+    "zod": "^4.3.5"
   },
   "devDependencies": {
     "@types/bun": "^1.1.14",
