fix: add error handling for MMKV storage and use API_URL env variable
- Wrap MMKV initialization in try-catch with fallback storage
- Add API_URL to app.json extra config
- Use Constants.expoConfig to get API URL in AI chat screen
- Prevents 'Cannot read property prototype of undefined' error
- Ensures app works even if native module fails to load

--- a/apps/native/app.json
+++ b/apps/native/app.json
@@ -102,7 +102,8 @@
       },
       "eas": {
         "projectId": "25830ad5-8307-4c9d-8a16-a785a2da9256"
-      }
+      },
+      "apiUrl": "${API_URL}"
     },
     "owner": "codewithkin"
   }
