--- a/apps/previous-native-folder/package.json
+++ b/apps/previous-native-folder/package.json
@@ -56,13 +56,10 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
-    "react-native-gesture-handler": "^2.30.0",
-    "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "^15.15.1",
     "react-native-toast-message": "^2.3.3",
     "react-native-web": "^0.21.0",
-    "react-native-worklets": "^0.7.1",
     "tailwind-merge": "^3.4.0",
     "zustand": "^4.5.1"
   },
@@ -78,6 +75,10 @@
     "prettier-plugin-tailwindcss": "^0.5.11",
     "tailwindcss": "^3.4.0",
     "typescript": "~5.9.2"
+  },
+  "resolutions": {
+    "react": "19.1.0",
+    "react-dom": "19.1.0"
   },
   "private": true
 }
