--- a/apps/native/cesconfig.jsonc
+++ b/apps/native/cesconfig.jsonc
@@ -26,7 +26,7 @@
     "overwrite": false,
     "importAlias": true,
     "packageManager": "bun",
-    "eas": true,
+    "eas": false,
     "publish": false
   },
   "packageManager": {
