Fix: Restructure native app navigation to use Slot at root level
- Changed root layout from Stack to Slot to allow proper route group rendering
- Reorganized onboarding and sign-in as separate layout groups
- Updated navigation paths to use grouped routes: /(onboarding), /(sign-in), /(tabs), /(drawer)
- Added proper Stack layouts for onboarding and sign-in route groups
- Updated auth protection logic to use new route structure
- Fixed navigation redirects to use grouped routes
- Updated app.json splash image reference from splash.png to splash-icon.png

--- a/apps/native/app.json
+++ b/apps/native/app.json
@@ -8,7 +8,7 @@
     "orientation": "default",
     "icon": "./assets/images/icon.png",
     "splash": {
-      "image": "./assets/images/splash.png",
+      "image": "./assets/images/splash-icon.png",
       "resizeMode": "contain",
       "backgroundColor": "#22c55e"
     },
