--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -50,6 +50,7 @@
     "zustand": "^5.0.10"
   },
   "devDependencies": {
+    "@babel/traverse": "^7.28.6",
     "@tangabiz/config": "workspace:*",
     "@types/node": "^24.10.0",
     "@types/react": "~19.1.0",
