--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -23,6 +23,7 @@
     "dotenv": "catalog:",
     "expo": "^54.0.23",
     "expo-constants": "~18.0.10",
+    "expo-dev-client": "~6.0.20",
     "expo-font": "~14.0.9",
     "expo-haptics": "^15.0.7",
     "expo-linking": "~8.0.8",
