--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/elements": "^2.8.1",
     "@tangabiz/env": "workspace:*",
     "@tanstack/react-query": "^5.90.19",
+    "clsx": "^2.1.1",
     "dotenv": "catalog:",
     "expo": "^54.0.23",
     "expo-constants": "~18.0.10",
@@ -36,11 +37,12 @@
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "^2.28.0",
+    "react-native-gifted-charts": "^1.4.70",
     "react-native-keyboard-controller": "1.18.5",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-svg": "15.12.1",
+    "react-native-svg": "^15.15.1",
     "react-native-web": "^0.21.0",
     "react-native-worklets": "0.5.1",
     "tailwind-merge": "^3.4.0",
