--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -8,6 +8,10 @@
     "dev": "bun run --hot src/index.ts",
     "build": "bun build src/index.ts --outdir ./dist --target bun",
     "start": "bun run dist/index.js",
+    "db:push": "bunx prisma db push",
+    "db:generate": "bunx prisma generate",
+    "db:migrate": "bunx prisma migrate dev",
+    "db:studio": "bunx prisma studio",
     "lint": "eslint .",
     "typecheck": "tsc --noEmit"
   },
@@ -18,13 +22,14 @@
     "@hono/zod-validator": "^0.4.2",
     "@mastra/core": "^0.24.9",
     "@mastra/memory": "^0.15.13",
+    "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^6.2.1",
-    "@tangabiz/db": "workspace:*",
     "@tangabiz/env": "workspace:*",
     "ai": "^6.0.39",
     "hono": "^4.6.16",
     "nodemailer": "^6.9.16",
     "pdfkit": "^0.15.1",
+    "pg": "^8.17.1",
     "zod": "^4.3.5"
   },
   "devDependencies": {
@@ -32,6 +37,8 @@
     "@types/node": "^22.10.2",
     "@types/nodemailer": "^6.4.17",
     "@types/pdfkit": "^0.13.8",
+    "@types/pg": "^8.16.0",
+    "prisma": "^6.2.1",
     "typescript": "^5.7.2"
   }
 }
