--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -18,8 +18,13 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/drawer": "^7.3.9",
     "@react-navigation/elements": "^2.8.1",
+    "@rn-primitives/avatar": "^1.2.0",
+    "@rn-primitives/portal": "^1.3.0",
+    "@rn-primitives/slot": "^1.2.0",
+    "@rn-primitives/types": "^1.2.0",
     "@tangabiz/env": "workspace:*",
     "@tanstack/react-query": "^5.90.19",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "catalog:",
     "expo": "^54.0.23",
@@ -48,6 +53,7 @@
     "tailwind-merge": "^3.4.0",
     "tailwind-variants": "^3.2.2",
     "tailwindcss": "^4.1.18",
+    "tailwindcss-animate": "^1.0.7",
     "uniwind": "^1.2.2",
     "zod": "catalog:",
     "zustand": "^5.0.10"
