--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -28,6 +28,7 @@
     "clsx": "^2.1.1",
     "dotenv": "catalog:",
     "expo": "^54.0.23",
+    "expo-clipboard": "^8.0.8",
     "expo-constants": "~18.0.10",
     "expo-dev-client": "~6.0.20",
     "expo-font": "~14.0.9",
