--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -26,6 +26,7 @@
     "@tanstack/react-query": "^5.90.19",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "dotenv": "catalog:",
     "expo": "^54.0.23",
     "expo-clipboard": "^8.0.8",
