refactor: migrate all fetch calls to axios HTTP client
- Install axios package in native app
- Update API client (lib/api.ts) to use axios with interceptors for auth token injection
- Update auth store (store/auth.ts) to use axios for CVT verification and authentication
- Fix useNotificationsCount hook to import notificationsApi from lib/api
- Add request/response interceptors for timeout and error handling
- Maintain same API interface for backward compatibility with existing code

--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -15,6 +15,7 @@
     "@expo/metro-runtime": "~6.1.2",
     "@expo/vector-icons": "^15.0.3",
     "@gorhom/bottom-sheet": "^5",
+    "@hugeicons/core-free-icons": "^3.1.1",
     "@hugeicons/react-native": "^1.0.11",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/drawer": "^7.3.9",
@@ -25,6 +26,7 @@
     "@rn-primitives/types": "^1.2.0",
     "@tangabiz/env": "workspace:*",
     "@tanstack/react-query": "^5.90.19",
+    "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
