--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -25,6 +25,7 @@
     "@rn-primitives/collapsible": "^1.2.0",
     "@rn-primitives/dialog": "^1.2.0",
     "@rn-primitives/label": "^1.2.0",
+    "@rn-primitives/popover": "^1.2.0",
     "@rn-primitives/portal": "^1.3.0",
     "@rn-primitives/progress": "^1.2.0",
     "@rn-primitives/radio-group": "^1.2.0",
